--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 chessboard.dimensions.x=8
 chessboard.dimensions.y=8
-piece.start.x=0
-piece.start.y=0
-piece.target.x=7
-piece.target.y=7
+
+# Please provide real chess notations (for example C 2 will be converted to 2 1 during the application run)
+piece.start.x=A
+piece.start.y=1
+piece.target.x=A
+piece.target.y=3
 max-allowed-moves=6
