--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-chessboard.dimensions.x=8
-chessboard.dimensions.y=8
+chessboard.dimensions.x=1000
+chessboard.dimensions.y=1000
 
-# Please provide real chess notations (for example C 2 will be converted to 2 1 during the application run)
+# For the X axis, can use letters or numbers (for example H and 8 are both acceptable).
+# If your board is bigger, then please provide a number (e.g. 9 for what would be I).
+# The Y axis can only be designated with numbers (starting from 1).
 piece.start.x=A
 piece.start.y=1
-piece.target.x=A
-piece.target.y=3
-max-allowed-moves=6
+piece.target.x=1000
+piece.target.y=1000
+max-allowed-moves=1000
