Refactor method names of Visitor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ chessboard.dimensions.y=8
 # If your board is bigger, then please provide a number (e.g. 9 for what would be I).
 # The Y axis can only be designated with numbers (starting from 1).
 piece.start.x=A
-piece.start.y=1
-piece.target.x=H
+piece.start.y=2
+piece.target.x=E
 piece.target.y=5
 max-allowed-moves=6
